# historical-jesus-son-of-god

./: .claude-local.md  .gitignore  .latexmkrc  CLAUDE.md  Chapter1 - Jesus Christ, Son of Joseph and Mary Christ  Chapter1 - Jesus Christ, Son of Joseph and Mary Christ.md  Chapter2 - He Truly was the Son of God  Chapter3 - Gospels are Historically Reliable  Chapter4 - Pauline Epistles to All Nations  Chapter5 - Purple Phoenix Raises Again  Chapter5 - Purple Phoenix Raises.md  LICENSE.md  README.md  chapter1.md  chapter1.tex  chapter2.md  chapter2.tex  chapter3.md  chapter3.tex  chapter4.md  chapter4.tex  chapter5.md  chapter5.tex  chapter6.tex  epilogue.tex  historical_cities_map.html  manuscript.tex  map.py  preface.md  preface.tex  pyproject.toml  references.bib
.claude/: .gitignore  settings.json
.githooks/: commit-msg  guard-destructive.sh  guard-no-direct-bin.sh  lint-pr-title.sh  post-checkout  pre-commit  pre-push  session-lock.sh
docs/: DD_0001_citation-review-report.md  DD_0002_research-qa-strategy.md  PM_0001_citation-verification-locate-and-present-not-score.md  PM_0001_keyword-extraction-fake-verification.md  PM_0002_embed-prep-no-keyword-extraction-under-any-name.md  PM_0002_keyword-extraction-in-embed-prep.md  PM_0003_step2-batches-must-use-build-coverage-not-adhoc.md  PM_0004_chatgpt-hijack-send-instead-of-read.md  PM_0004_gpt-confidence-is-not-a-criterion.md  PM_0006_chapter-selection-by-architecture-not-topic-adjacency.md  PM_0007_unverifiable-manuscript-prose-deleted-to-flagged.md  PM_0007_unverifiable-manuscript-prose-is-flagged-not-deleted.md  (+2 more)
(+146 files in other folders)
